# amazon-kinesis-video-streams-producer-sdk-cpp

./: CMakeLists.txt
kinesis-video-gst-demo/: fileupload.cpp  kinesis_video_gstreamer_audio_video_sample_app.cpp  kinesis_video_gstreamer_sample_app.cpp  memorystats.h  queue.h
kinesis-video-gstreamer-plugin/: CMakeLists.txt
kinesis-video-gstreamer-plugin/plugin-src/: KvsSinkIotCertCredentialProvider.cpp  KvsSinkIotCertCredentialProvider.h  gstkvssink.cpp
kinesis-video-native-build/: CMakeLists.txt  set_kvs_sdk_env.sh
kinesis-video-pic/src/client/include/com/amazonaws/kinesis/video/client/: Include.h
kinesis-video-pic/src/client/src/: Client.cpp
kinesis-video-pic/src/mkvgen/include/com/amazonaws/kinesis/video/mkvgen/: Include.h
kinesis-video-producer/: CMakeLists.txt
kinesis-video-producer/src/: CallbackProvider.h  DefaultCallbackProvider.cpp  DefaultCallbackProvider.h  DeviceInfoProvider.h  KinesisVideoStream.cpp  KinesisVideoStream.h  OngoingStreamState.cpp  Response.cpp
kinesis-video-producer/src/common/: PutFrameHelper.cpp  PutFrameHelper.h
kinesis-video-producer/src/credential-providers/: IotCertCredentialProvider.cpp
kinesis-video-rdkc-demo/: kinesis_video_rdkc_sample_app.cpp
sample/: kvsupload.cpp  kvsupload.h  memorystats.cpp
